syntax = "proto3";

import "risk_report.proto";

option java_multiple_files = true;
option java_package = "com.bfam.riskreport.service";
option java_outer_classname = "ReportServiceProto";

service ReportService {
    rpc query ( ReportRequest) returns (  ReportResponse) {}
    rpc subscribe  (stream ReportRequest) returns (stream ReportResponse) {}
}

message ReportRequest{
    string request_id =1;
    repeated string columns = 2;
    string filter = 3;
    repeated string group_by =4;
}

message ReportResponse{
    string request_id =1;
    Schema schema = 2;
    repeated Row rows =3;
}


message FieldSchema{

    enum Type {
        BOOLEAN = 0;
        INT = 1;
        LONG = 2;
        FLOAT = 3;
        DOUBLE = 4;
        BYTES = 5;
        STRING = 6;
    }
    Type type = 1;
    string name = 2;
}

message Schema{
    string name = 1;
    repeated FieldSchema fields = 2;
}

